--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "active-cd"
 version = "0.1.0"
 edition = "2021"
+authors = [ "Oliver <oliver.d.333@proton.me" ]
+description = "A tui for the cd command"
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/oli-ver-d/active-cd"
 
 [dependencies]
 anyhow = "1.0.93"
